# backend/docs/swagger.yaml
@@ -197,8 +197,83 @@ paths:
         "500":
           description: Server error
 
+  /api/v1/merchant/products/file:
+    post:
+      tags:
+        - admin-products
+      summary: Upload multiple product images
+      security:
+        - BearerAuth: []
+      consumes:
+        - multipart/form-data
+      requestBody:
+        required: true
+        content:
+          multipart/form-data:
+            schema:
+              type: object
+              properties:
+                image:
+                  type: string
+                  format: binary
+                  description: Image file to upload
+              required:
+                - image
+      responses:
+        "200":
+          description: Image uploaded successfully
+        "400":
+          description: Invalid file format or missing file
+        "401":
+          description: Unauthorized
+        "500":
+          description: Server error
+
+  /api/v1/merchant/products/image:
+    post:
+      tags:
+        - admin-products
+      summary: Get product image
+      security:
+        - BearerAuth: []
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              type: object
+              required:
+                - key
+              properties:
+                key:
+                  type: string
+                  description: Key of the image
+                  example: "image-123.jpg"
+      responses:
+        "200":
+          description: Image fetched successfully
 
   /api/v1/merchant/products/{id}:
+    get:
+      tags:
+        - admin-products
+      summary: Get a product by id
+      parameters:
+        - name: id
+          in: path
+          description: Id of the product
+          required: true
+          schema:
+            type: integer
+      responses:
+        "200":
+          description: Product fetch successfully
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/Product"
+        "500":
+          description: Server error
     put:
       tags:
         - admin-products
